--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,6 +3,7 @@
 <html lang="end">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>{$template "title" .$}</title>
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="/css/base.css">
